einstellung_derive/src/snapshots/einstellung_derive__test__output_optional_fields_no_double_option.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ClientConfig {
    name: String,
    timeout_ms: Option<u32>,
    proxy: Option<String>,
}

/// --- output ---
///Partial configuration for the `ClientConfig` type.
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct ClientConfigPartial {
    ///Partial value for the `name` configuration field.
    name: ::core::option::Option<String>,
    ///Partial value for the `timeout_ms` configuration field.
    timeout_ms: ::core::option::Option<u32>,
    ///Partial value for the `proxy` configuration field.
    proxy: ::core::option::Option<String>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for ClientConfigPartial {
    type Complete = ClientConfig;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {
            name: next.name.or(self.name),
            timeout_ms: next.timeout_ms.or(self.timeout_ms),
            proxy: next.proxy.or(self.proxy),
        })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(ClientConfig {
            name: self
                .name
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("ClientConfig", "name"),
                    ),
                )?,
            timeout_ms: self.timeout_ms,
            proxy: self.proxy,
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.name).is_some() {
            fields.push(::std::string::String::from("name"));
        }
        if (&self.timeout_ms).is_some() {
            fields.push(::std::string::String::from("timeout_ms"));
        }
        if (&self.proxy).is_some() {
            fields.push(::std::string::String::from("proxy"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let fields = ::std::vec::Vec::new();
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for ClientConfig {
    type Partial = ClientConfigPartial;
}
