einstellung_derive/src/snapshots/einstellung_derive__test__output_raw_struct_identifier.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[allow(non_camel_case_types)]
#[derive(Config)]
struct r#type {
    value: u16,
}

/// --- output ---
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct typePartial {
    value: ::core::option::Option<u16>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for typePartial {
    type Complete = r#type;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {
            value: next.value.or(self.value),
        })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(r#type {
            value: self
                .value
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("r#type", "value"),
                    ),
                )?,
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.value).is_some() {
            fields.push(::std::string::String::from("value"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let fields = ::std::vec::Vec::new();
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for r#type {
    type Partial = typePartial;
}
