einstellung_derive/src/snapshots/einstellung_derive__test__output_serde_attribute_forwarding.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ApiConfig {
    #[config(serde(rename = "API_KEY"))]
    key: String,
    #[config(serde(alias = "max_retries", default))]
    retries: u8,
    #[config(serde(skip_serializing_if = "Option::is_none"))]
    endpoint: Option<String>,
}

/// --- output ---
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct ApiConfigPartial {
    #[serde(rename = "API_KEY")]
    key: ::core::option::Option<String>,
    #[serde(alias = "max_retries", default)]
    retries: ::core::option::Option<u8>,
    #[serde(skip_serializing_if = "Option::is_none")]
    endpoint: ::core::option::Option<String>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for ApiConfigPartial {
    type Complete = ApiConfig;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {
            key: next.key.or(self.key),
            retries: next.retries.or(self.retries),
            endpoint: next.endpoint.or(self.endpoint),
        })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(ApiConfig {
            key: self
                .key
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("ApiConfig", "key"),
                    ),
                )?,
            retries: self
                .retries
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("ApiConfig", "retries"),
                    ),
                )?,
            endpoint: self.endpoint,
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.key).is_some() {
            fields.push(::std::string::String::from("key"));
        }
        if (&self.retries).is_some() {
            fields.push(::std::string::String::from("retries"));
        }
        if (&self.endpoint).is_some() {
            fields.push(::std::string::String::from("endpoint"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let fields = ::std::vec::Vec::new();
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for ApiConfig {
    type Partial = ApiConfigPartial;
}
