einstellung_derive/src/snapshots/einstellung_derive__test__output_serde_forward_shorthand.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct Config {
    #[config(serde(rename = "field"))]
    x: Vec<u32>,
}

/// --- output ---
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct ConfigPartial {
    #[serde(rename = "field")]
    x: ::core::option::Option<Vec<u32>>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for ConfigPartial {
    type Complete = Config;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self { x: next.x.or(self.x) })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Config {
            x: self
                .x
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("Config", "x"),
                    ),
                )?,
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.x).is_some() {
            fields.push(::std::string::String::from("x"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for Config {
    type Partial = ConfigPartial;
}
