einstellung_derive/src/snapshots/einstellung_derive__test__output_subconfig_with_merge.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct AppConfig {
    #[config(subconfig, merge = "replace")]
    db: DatabaseConfig,
}
#[derive(Config)]
struct DatabaseConfig {
    url: String,
}

/// --- output ---
::core::compile_error! {
    "unexpected token"
}
