einstellung_derive/src/snapshots/einstellung_derive__test__output_unknown_config_attribute.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ServerConfig {
    #[config(made_up_flag = true)]
    host: String,
}

/// --- output ---
::core::compile_error! {
    "Unknown field: `made_up_flag`. Available values: `default`, `freezable`, `merge`, `partial`, `serde`, `subconfig`, `validate`"
}
